# latest-indonesia-earthquake

./: README.md  pyproject.toml  requirements.txt
earthqueke-bmkg/earthqueke-bmkg/: __init__.py
my-package/: README.md  pyproject.toml
my-package/src/my_package/: __init__.py
src/: main.py
src/earthqueke/: queke.py
