[tool.poetry]
name = "latets-indonesia-earthquekeBMKG"
version = "0.1.0"
description = ""
authors = ["novelmisatake <fteguh088@gmail.com>"]
readme = "README.md"
packages = [{include = "my_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
